src/fitpack_convex_curves_c.f90


        if (want_pointer) then
            c%cptr = c_loc(f)
            c%is_pointer = .true._c_bool
        else
            c = fitpack_convex_curve_c_f2c(f)
        end if
    end function fitpack_convex_curve_c_fptr2c

    ! ===========================================================================================
    ! SECTION 7: Method Wrappers (bind(C))
    ! ===========================================================================================
    !> fit
    integer(c_int32_t) function fitpack_convex_curve_c_fit(this, smoothing, order, keep_knots) bind(C,  &
        & name='fitpack_convex_curve_c_fit')
        type(fitpack_convex_curve_c), intent(in) :: this
        real(c_double), intent(in), optional :: smoothing
        integer(c_int32_t), intent(in), optional :: order
        logical(c_bool), intent(in), optional :: keep_knots
        type(fitpack_convex_curve), pointer :: fthis
        logical :: f_keep_knots

        fthis => f_pointer(this)
        if (associated(fthis)) then
            if (present(keep_knots)) f_keep_knots = logical(keep_knots)
            if (present(keep_knots)) then
                fitpack_convex_curve_c_fit = fthis%fit(smoothing=smoothing, order=order, keep_knots=f_keep_knots)
            else
                fitpack_convex_curve_c_fit = fthis%fit(smoothing=smoothing, order=order)
            end if
        else
            fitpack_convex_curve_c_fit = 0
        end if
    end function fitpack_convex_curve_c_fit

    !> least_squares
    integer(c_int32_t) function fitpack_convex_curve_c_least_squares(this, smoothing, reset_knots) bind(C,  &
        & name='fitpack_convex_curve_c_least_squares')
        type(fitpack_convex_curve_c), intent(in) :: this
        real(c_double), intent(in), optional :: smoothing
        logical(c_bool), intent(in), optional :: reset_knots
        type(fitpack_convex_curve), pointer :: fthis
        logical :: f_reset_knots

        fthis => f_pointer(this)
        if (associated(fthis)) then
            if (present(reset_knots)) f_reset_knots = logical(reset_knots)
            if (present(reset_knots)) then
                fitpack_convex_curve_c_least_squares = fthis%least_squares(smoothing=smoothing, reset_knots=f_reset_knots)
            else
                fitpack_convex_curve_c_least_squares = fthis%least_squares(smoothing=smoothing)
            end if
        else
            fitpack_convex_curve_c_least_squares = 0
        end if
    end function fitpack_convex_curve_c_least_squares

    !> comm_size
    integer(c_int32_t) function fitpack_convex_curve_c_comm_size(this) bind(C, name='fitpack_convex_curve_c_comm_size')
        type(fitpack_convex_curve_c), intent(in) :: this
        type(fitpack_convex_curve), pointer :: fthis

        fthis => f_pointer(this)
        if (associated(fthis)) then
            fitpack_convex_curve_c_comm_size = fthis%comm_size()
        else
            fitpack_convex_curve_c_comm_size = 0
        end if
    end function fitpack_convex_curve_c_comm_size

    !> mse
    real(c_double) function fitpack_convex_curve_c_mse(this) bind(C, name='fitpack_convex_curve_c_mse')
        type(fitpack_convex_curve_c), intent(in) :: this
        type(fitpack_convex_curve), pointer :: fthis

        fthis => f_pointer(this)
        if (associated(fthis)) then
            fitpack_convex_curve_c_mse = fthis%mse()
        else
            fitpack_convex_curve_c_mse = 0.0_c_double
        end if
    end function fitpack_convex_curve_c_mse

    !> core_comm_size
    integer(c_int32_t) function fitpack_convex_curve_c_core_comm_size(this) bind(C, name='fitpack_convex_curve_c_core_comm_size')
        type(fitpack_convex_curve_c), intent(in) :: this
        type(fitpack_convex_curve), pointer :: fthis

        fthis => f_pointer(this)
        if (associated(fthis)) then
            fitpack_convex_curve_c_core_comm_size = fthis%core_comm_size()
        else
            fitpack_convex_curve_c_core_comm_size = 0
        end if
    end function fitpack_convex_curve_c_core_comm_size

    !> destroy_base
    subroutine fitpack_convex_curve_c_destroy_base(this) bind(C, name='fitpack_convex_curve_c_destroy_base')
        type(fitpack_convex_curve_c), intent(inout) :: this
        type(fitpack_convex_curve), pointer :: fthis

        fthis => f_pointer(this)
        if (associated(fthis)) then
            call fthis%destroy_base()
        end if
    end subroutine fitpack_convex_curve_c_destroy_base

    !> new_points
    subroutine fitpack_convex_curve_c_new_points(this, n, x, y, w) bind(C, name='fitpack_convex_curve_c_new_points')
        type(fitpack_convex_curve_c), intent(inout) :: this
        integer(c_int32_t), intent(in), value :: n
        real(c_double), intent(in) :: x(n)
        real(c_double), intent(in) :: y(n)
        real(c_double), optional, intent(in) :: w(n)
        type(fitpack_convex_curve), pointer :: fthis

        fthis => f_pointer(this)
        if (associated(fthis)) then
            call fthis%new_points(x, y, w)
        end if
    end subroutine fitpack_convex_curve_c_new_points

    !> set_convexity
    integer(c_int32_t) function fitpack_convex_curve_c_set_convexity(this, n, v) bind(C,  &
        & name='fitpack_convex_curve_c_set_convexity')
        type(fitpack_convex_curve_c), intent(in) :: this
        integer(c_int32_t), intent(in), value :: n
        real(c_double), intent(in) :: v(n)
        type(fitpack_convex_curve), pointer :: fthis

        fthis => f_pointer(this)
        if (associated(fthis)) then
            fitpack_convex_curve_c_set_convexity = fthis%set_convexity(v)
        else
            fitpack_convex_curve_c_set_convexity = 0
        end if
    end function fitpack_convex_curve_c_set_convexity

    !> comm_pack
    subroutine fitpack_convex_curve_c_comm_pack(this, n, buffer) bind(C, name='fitpack_convex_curve_c_comm_pack')
        type(fitpack_convex_curve_c), intent(inout) :: this
        integer(c_int32_t), intent(in), value :: n
        real(c_double), intent(inout) :: buffer(n)
        type(fitpack_convex_curve), pointer :: fthis

        fthis => f_pointer(this)
        if (associated(fthis)) then
            call fthis%comm_pack(buffer)
        end if
    end subroutine fitpack_convex_curve_c_comm_pack

    !> comm_expand
    subroutine fitpack_convex_curve_c_comm_expand(this, n, buffer) bind(C, name='fitpack_convex_curve_c_comm_expand')
        type(fitpack_convex_curve_c), intent(inout) :: this
        integer(c_int32_t), intent(in), value :: n
        real(c_double), intent(in) :: buffer(n)
        type(fitpack_convex_curve), pointer :: fthis

        fthis => f_pointer(this)
        if (associated(fthis)) then
            call fthis%comm_expand(buffer)
        end if
    end subroutine fitpack_convex_curve_c_comm_expand

    !> core_comm_pack
    subroutine fitpack_convex_curve_c_core_comm_pack(this, n, buffer) bind(C, name='fitpack_convex_curve_c_core_comm_pack')
        type(fitpack_convex_curve_c), intent(inout) :: this
        integer(c_int32_t), intent(in), value :: n
        real(c_double), intent(inout) :: buffer(n)
        type(fitpack_convex_curve), pointer :: fthis

        fthis => f_pointer(this)
        if (associated(fthis)) then
            call fthis%core_comm_pack(buffer)
        end if
    end subroutine fitpack_convex_curve_c_core_comm_pack

    !> core_comm_expand
    subroutine fitpack_convex_curve_c_core_comm_expand(this, n, buffer) bind(C, name='fitpack_convex_curve_c_core_comm_expand')
        type(fitpack_convex_curve_c), intent(inout) :: this
        integer(c_int32_t), intent(in), value :: n
        real(c_double), intent(in) :: buffer(n)
        type(fitpack_convex_curve), pointer :: fthis

        fthis => f_pointer(this)
        if (associated(fthis)) then
            call fthis%core_comm_expand(buffer)
        end if
    end subroutine fitpack_convex_curve_c_core_comm_expand

    ! ===========================================================================================
    ! SECTION 8: Component Array Accessors (raw pointer + extents)
    ! ===========================================================================================

    !> Raw view of component 'v': address of the first element, plus
    !> the component's 1 extent(s). Null pointer and zero extents when the
    !> object or the component is unallocated; an allocated but zero-sized
    !> component still reports its true shape, but has no representable address.
    !> Symbol uses the `getcomp_` infix (not `get_`) so it can never collide
    !> with a type-bound procedure named `get_<component>`.
    subroutine fitpack_convex_curve_c_getcomp_v(this, ptr, extents) &
        bind(C, name='fitpack_convex_curve_c_getcomp_v')
        type(fitpack_convex_curve_c), intent(in) :: this
        type(c_ptr), intent(out) :: ptr
        integer(c_int64_t), intent(out) :: extents(1)
        type(fitpack_convex_curve), pointer :: fthis

        ptr = c_null_ptr
        extents = 0_c_int64_t
        fthis => f_pointer(this)
        if (associated(fthis)) then
            if (allocated(fthis%v)) then
                extents = int(shape(fthis%v), kind=c_int64_t)
                if (size(fthis%v) > 0) ptr = c_loc(fthis%v)
            end if
        end if
    end subroutine fitpack_convex_curve_c_getcomp_v

    !> Raw view of component 'sx': address of the first element, plus
    !> the component's 1 extent(s). Null pointer and zero extents when the
    !> object or the component is unallocated; an allocated but zero-sized
    !> component still reports its true shape, but has no representable address.
    !> Symbol uses the `getcomp_` infix (not `get_`) so it can never collide
    !> with a type-bound procedure named `get_<component>`.
    subroutine fitpack_convex_curve_c_getcomp_sx(this, ptr, extents) &
        bind(C, name='fitpack_convex_curve_c_getcomp_sx')
        type(fitpack_convex_curve_c), intent(in) :: this
        type(c_ptr), intent(out) :: ptr
        integer(c_int64_t), intent(out) :: extents(1)
        type(fitpack_convex_curve), pointer :: fthis

        ptr = c_null_ptr
        extents = 0_c_int64_t
        fthis => f_pointer(this)
        if (associated(fthis)) then
            if (allocated(fthis%sx)) then
                extents = int(shape(fthis%sx), kind=c_int64_t)
                if (size(fthis%sx) > 0) ptr = c_loc(fthis%sx)
            end if
        end if
    end subroutine fitpack_convex_curve_c_getcomp_sx

    ! ===========================================================================================
    ! SECTION 9: Scalar Property Accessors
    ! ===========================================================================================

    !> Get pointer to scalar property 'maxtr'
    type(c_ptr) function fitpack_convex_curve_c_ref_maxtr(this) &
        bind(C, name='fitpack_convex_curve_c_ref_maxtr')
        type(fitpack_convex_curve_c), intent(in) :: this
        type(fitpack_convex_curve), pointer :: fthis
        fthis => f_pointer(this)
        if (associated(fthis)) then
            fitpack_convex_curve_c_ref_maxtr = c_loc(fthis%maxtr)
        else
            fitpack_convex_curve_c_ref_maxtr = c_null_ptr
        end if
    end function fitpack_convex_curve_c_ref_maxtr

    !> Get pointer to scalar property 'maxbin'
    type(c_ptr) function fitpack_convex_curve_c_ref_maxbin(this) &
        bind(C, name='fitpack_convex_curve_c_ref_maxbin')
        type(fitpack_convex_curve_c), intent(in) :: this
        type(fitpack_convex_curve), pointer :: fthis
        fthis => f_pointer(this)
        if (associated(fthis)) then
            fitpack_convex_curve_c_ref_maxbin = c_loc(fthis%maxbin)
        else
            fitpack_convex_curve_c_ref_maxbin = c_null_ptr
        end if
    end function fitpack_convex_curve_c_ref_maxbin

end module fitpack_convex_curves_c
